@@ -481,11 +481,6 @@ abstract class CMSModule
     /**
      * Returns the help for the module
      *
-     * Note: New for CMSMS 1.11.12 - If the global variable CMSMS_GENERATING_XML is set
-     * it indicates that the help output will be stored in an XML file.  This variable
-     * can be used to check wether advanced html output (like links to other documents)
-     * should be generated.
-	 *
      * @abstract
      * @return string Help HTML Text.
      */
