@@ -194,10 +194,13 @@ final class ModuleOperations
     }
 
     /**
-     * @internal
-     * @ignore
+     * Generate a moduleinfo.ini file for a module.
+     *
+     * @since 2.3
+     * @param CMSModule $modinstance;
+     * @return string
      */
-    private function _generate_moduleinfo( CMSModule &$modinstance )
+    public function generate_moduleinfo( CMSModule $modinstance )
     {
         $dir = self::get_module_path( $modinstance->GetName() );
         if( !is_writable( $dir ) ) throw new CmsFileSystemException(lang('errordirectorynotwritable'));
@@ -219,76 +222,10 @@ final class ModuleOperations
                 fputs($fh,"$key = $val\n");
             }
         }
+        fputs($fh,"[meta]\n");
+        fputs($fn,"generated = ".time()."\n");
+        fputs($fn,"cms_ver = ".CMS_VERSION."\n");
         fclose($fh);
-    }
-
-    /**
-     * Creates an xml data package from the module directory.
-     *
-     * @param CMSModule $modinstance The instance of the module object
-     * @param string $message Reference to a string which will be filled with the message
-     *                        created by the run of the method
-     * @param int $filecount Reference to an interger which will be filled with the
-     *                           total # of files in the package
-     * @return string an XML string comprising the module and its files
-     */
-    function CreateXMLPackage( CMSModule &$modinstance, &$message, &$filecount )
-    {
-        // get a file list
-        global $CMSMS_GENERATING_XML;
-        $CMSMS_GENERATING_XML = 1;
-        $filecount = 0;
-        $dir = self::get_module_path( $modinstance->GetName() );
-        if( !is_writable( $dir ) ) throw new CmsFileSystemException(lang('errordirectorynotwritable'));
-
-        // generate the moduleinfo.ini file
-        $this->_generate_moduleinfo($modinstance);
-        $files = get_recursive_file_list( $dir, $this->xml_exclude_files );
-
-        $xmltxt  = '<?xml version="1.0" encoding="ISO-8859-1"?>';
-        $xmltxt .= $this->xmldtd."\n";
-        $xmltxt .= "<module>\n";
-        $xmltxt .= "	<dtdversion>".MODULE_DTD_VERSION."</dtdversion>\n";
-        $xmltxt .= "	<name>".$modinstance->GetName()."</name>\n";
-        $xmltxt .= "	<version>".$modinstance->GetVersion()."</version>\n";
-        $xmltxt .= "    <mincmsversion>".$modinstance->MinimumCMSVersion()."</mincmsversion>\n";
-        $xmltxt .= "	<help><![CDATA[".base64_encode($modinstance->GetHelpPage())."]]></help>\n";
-        $xmltxt .= "	<about><![CDATA[".base64_encode($modinstance->GetAbout())."]]></about>\n";
-        $desc = $modinstance->GetAdminDescription();
-        if( $desc != '' ) $xmltxt .= "	<description><![CDATA[".$desc."]]></description>\n";
-
-        $depends = $modinstance->GetDependencies();
-        foreach( $depends as $key=>$val ) {
-            $xmltxt .= "	<requires>\n";
-            $xmltxt .= "	  <requiredname>$key</requiredname>\n";
-            $xmltxt .= "	  <requiredversion>$val</requiredversion>\n";
-            $xmltxt .= "	</requires>\n";
-        }
-        foreach( $files as $file ) {
-            // strip off the beginning
-            if (substr($file,0,strlen($dir)) == $dir) $file = substr($file,strlen($dir));
-            if( $file == '' ) continue;
-
-            $xmltxt .= "	<file>\n";
-            $filespec = $dir.DIRECTORY_SEPARATOR.$file;
-            $xmltxt .= "	  <filename>$file</filename>\n";
-            if( @is_dir( $filespec ) ) {
-                $xmltxt .= "	  <isdir>1</isdir>\n";
-            }
-            else {
-                $xmltxt .= "	  <isdir>0</isdir>\n";
-                $data = base64_encode(file_get_contents($filespec));
-                $xmltxt .= "	  <data><![CDATA[".$data."]]></data>\n";
-            }
-
-            $xmltxt .= "	</file>\n";
-            ++$filecount;
-        }
-        $xmltxt .= "</module>\n";
-        $message = 'XML package of '.strlen($xmltxt).' bytes created for '.$modinstance->GetName();
-        $message .= ' including '.$filecount.' files';
-        unset($CMSMS_GENERATING_XML);
-        return $xmltxt;
     }
 
     /**
@@ -327,7 +264,7 @@ final class ModuleOperations
                     $dbr = $db->Execute($query,array($depname,$module_obj->GetName(),$depversion));
                 }
             }
-            $this->_generate_moduleinfo( $module_obj );
+            $this->generate_moduleinfo( $module_obj );
             $this->_moduleinfo = array();
             $gCms->clear_cached_files();
 
@@ -641,7 +578,7 @@ final class ModuleOperations
                     $dbr = $db->Execute($query,array($depname,$module_obj->GetName(),$depversion));
                 }
             }
-            $this->_generate_moduleinfo( $module_obj );
+            $this->generate_moduleinfo( $module_obj );
             $this->_moduleinfo = array();
             $gCms->clear_cached_files();
             audit('','Module', 'Upgraded module '.$module_obj->GetName().' to version '.$module_obj->GetVersion());
